# world-id-relay

./: .gitignore  Cargo.toml  README.md
crates/test_utils/: Cargo.toml
crates/test_utils/src/: abi.rs
src/: abi.rs  config.rs  error.rs  lib.rs  state_bridge.rs  transaction.rs  utils.rs
test_utils/src/: chain_mock.rs
tests/: bridge_service.rs
