[package]
name = "state-bridge-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
config = "0.14.0"
criterion = { version = "0.5.1", features = ["async", "async_futures"] }
ethers = { version = "2.0.10", features = ["abigen"] }
ethers-throttle = { git = "https://github.com/0xKitsune/ethers-throttle.git" }
eyre = "0.6.9"
futures = "0.3.28"
governor = "0.6.0"
hex = "0.4.3"
metrics = "0.21.1"
opentelemetry = "0.21.0"
rand = "0.8.5"
ruint = "1.10.1"
semaphore = { git = "https://github.com/worldcoin/semaphore-rs", branch = "main", features = [
    "depth_20",
] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
take_mut = "0.2.2"
telemetry-batteries = { git = "https://github.com/worldcoin/telemetry-batteries.git", rev = "802a4f39f358e077b11c8429b4c65f3e45b85959" }
thiserror = "1.0.49"
tokio = { version = "1.34.0", features = ["sync", "macros", "rt-multi-thread"] }
toml = "0.8.8"
tracing = "0.1"
tracing-subscriber = "0.3.18"
url = "2.4.1"

[dev-dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
test_utils = { path = "crates/test_utils" }

[[bin]]
name = "state-bridge-relay"
path = "bin/state_bridge_relay.rs"
