[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0.10", features = [
    "abigen",
    "ws",
    "ipc",
    "rustls",
    "openssl",
] }
eyre = "0.6.8"
serde = "1.0.189"
tokio = "1.33.0"
http = "0.2.9"
serde_json = "1.0.108"
tracing-serde = "0.1.3"
chrono = "0.4.31"
dirs = "5.0.1"
